--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,5 +1,9 @@
 .account {
-    padding: 10px;
+    padding: 5px 10px;
+    display: block;
+    position: relative;
+    float: right;
+    margin-top: 0.7em;
 }
 
 .btn-accesso {
@@ -12,8 +16,10 @@
 }
 
 .login {
-    font-size: 24px;
+    font-size: 16px;
     font-weight: bold;
     color: #fff;
-    box-shadow: none;
+    display: inline;
+    padding-left: 10px;
+    vertical-align: middle;
 }
